users startup data edit

--- a/admin/Edit.html
+++ b/admin/Edit.html
@@ -208,7 +208,7 @@
 
                                             <label>
                                                 Linkedin URL *
-                                                <input type="text" name="LinkedinURL_Mentor" required>
+                                                <input type="text" name="linkedin" required>
                                             </label>
                                             <label>
                                                 Number of active Months *
