--- a/userPanel/mentorPanel/index.html
+++ b/userPanel/mentorPanel/index.html
@@ -543,21 +543,21 @@
                     </div>
                 </div>
                 <div class="card-body">
-                    <form>
+                    <form id="usersMentorEditForm">
                         <h6 class="heading-small text-muted mb-4">Mentor information</h6>
                         <div>
                             <div class="row">
                                 <div class="col-lg-6">
                                     <div class="form-group">
                                         <label class="form-control-label" for="input-Mentorname">Mentor Name</label>
-                                        <input type="text" id="input-Mentorname" class="form-control"
+                                        <input name="username" type="text" id="input-Mentorname" class="form-control"
                                             placeholder="Mentor Name" value="">
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="form-group">
                                         <label class="form-control-label" for="input-email">Email address</label>
-                                        <input type="email" id="input-email" class="form-control"
+                                        <input type="email" name="email_Mentor" id="input-email" class="form-control"
                                             placeholder="cake@example.com">
                                     </div>
                                 </div>
@@ -566,23 +566,23 @@
                                 <div class="col-lg-4">
                                     <div class="form-group">
                                         <label class="form-control-label" for="input-phone">Phone</label>
-                                        <input type="text" id="input-phone" class="form-control" placeholder="+91"
-                                            value="">
+                                        <input name="Phone_Mentor" type="text" id="input-phone" class="form-control"
+                                            placeholder="+91" value="">
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="form-group">
                                         <label class="form-control-label" for="input-profile_photo">Profile
                                             Photo</label>
-                                        <input type="file" id="input-profile_photo" class="form-control" placeholder=""
-                                            value="">
+                                        <input type="file" name="Photo" id="input-profile_photo" class="form-control"
+                                            placeholder="" value="">
                                     </div>
                                 </div>
                                 <div class="col-lg-2">
 
                                     <label for="stage">Is this company logo *</label>
                                     <br>
-                                    <select class="selectBox stage" name="stage" id="cars" required>
+                                    <select class="selectBox stage" name="compnyLogo_Mentor" id="cars" required>
                                         <option value="no">NO</option>
                                         <option value="yes">YES</option>
                                     </select>
@@ -592,8 +592,8 @@
                                     <div class="form-group">
                                         <label class="form-control-label" for="input-active_months">
                                             Active Months</label>
-                                        <input type="text" id="input-active_months" class="form-control" placeholder=""
-                                            value="">
+                                        <input name="ActiveMonths_Mentor" type="text" id="input-active_months"
+                                            class="form-control" placeholder="" value="">
                                     </div>
                                 </div>
                             </div>
@@ -606,24 +606,24 @@
                                 <div class="col-lg-4">
                                     <div class="form-group">
                                         <label class="form-control-label" for="input-state">State</label>
-                                        <input id="input-state" class="form-control" placeholder="state" value=""
-                                            type="text">
+                                        <input id="input-state" name="state_Mentor" class="form-control"
+                                            placeholder="state" value="" type="text">
                                     </div>
 
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="form-group">
                                         <label class="form-control-label" for="input-url">Company URL</label>
-                                        <input id="input-url" class="form-control" placeholder="https://" value=""
-                                            type="text">
+                                        <input id="input-url" name="companyUrl_Mentor" class="form-control"
+                                            placeholder="https://" value="" type="text">
                                     </div>
 
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="form-group">
                                         <label class="form-control-label" for="input-District">District</label>
-                                        <input id="input-District" class="form-control" placeholder="District" value=""
-                                            type="text">
+                                        <input id="input-District" name="district_mentor" class="form-control"
+                                            placeholder="District" value="" type="text">
                                     </div>
 
                                 </div>
@@ -633,22 +633,22 @@
                                 <div class="col-lg-4">
                                     <div class="form-group">
                                         <label class="form-control-label" for="input-city">City</label>
-                                        <input type="text" id="input-city" class="form-control" placeholder="City"
-                                            value="">
+                                        <input type="text" name="City_Mentor" id="input-city" class="form-control"
+                                            placeholder="City" value="">
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="form-group">
                                         <label class="form-control-label" for="input-country">Country</label>
-                                        <input type="text" id="input-country" class="form-control" placeholder="Country"
-                                            value="">
+                                        <input type="text" name="country_Mentor" id="input-country" class="form-control"
+                                            placeholder="Country" value="">
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="form-group">
                                         <label class="form-control-label" for="input-code">Postal code</label>
-                                        <input type="number" id="input-code" class="form-control"
-                                            placeholder="Postal code">
+                                        <input type="number" id="input-code" name="postalCode_Mentor"
+                                            class="form-control" placeholder="Postal code">
                                     </div>
                                 </div>
                             </div>
@@ -660,7 +660,7 @@
                             <div class="col-lg-6">
 
                                 <label for="nw">Select your Network</label>
-                                <select class="selectBox" name="nw" id="nw">
+                                <select class="selectBox" name="network_Mentor" id="nw">
                                     <option value="tie">TIE</option>
                                     <option value="others">Others</option>
                                 </select>
@@ -671,16 +671,17 @@
                             <div class="col-lg-6">
 
                                 <div class="form-group">
-                                    <label class="form-control-label" for="input-Tagline">Tagline</label>
-                                    <input type="text" id="input-Tagline" class="form-control" placeholder="Tagline"
-                                        value="">
+                                    <label class="form-control-label" for="input-Tagline">Brief/Tagline</label>
+                                    <input type="text" name="briefTagline_Mentor" id="input-Tagline"
+                                        class="form-control" placeholder="Tagline" value="">
                                 </div>
                             </div>
                             <div class="col-lg-4">
 
                                 <label for="stage">Stage of Startup *</label>
                                 <br>
-                                <select class="selectBox stage" name="stage" id="cars" required>
+                                <select name="startupStage_Mentor" class="selectBox stage" name="stage" id="cars"
+                                    required>
                                     <option value="ideation">ideation</option>
                                     <option value="validation">validation</option>
                                     <option value="early traction">Early Traction</option>
@@ -692,21 +693,22 @@
                             <div class="col-lg-4">
                                 <div class="form-group">
                                     <label class="form-control-label" for="input-Industry">Industry</label>
-                                    <input type="text" id="input-Industry" class="form-control"
+                                    <input name="industry_Mentor" type="text" id="input-Industry" class="form-control"
                                         placeholder="Eg : Automation" value="">
                                 </div>
                             </div>
                             <div class="col-lg-4">
                                 <div class="form-group">
                                     <label class="form-control-label" for="input-Sector">Sector</label>
-                                    <input type="text" id="input-Sector" class="form-control" placeholder="Eg : Private"
-                                        value="">
+                                    <input name="Sector_Mentor" type="text" id="input-Sector" class="form-control"
+                                        placeholder="Eg : Private" value="">
                                 </div>
                             </div>
                             <div class="col-lg-4">
                                 <div class="form-group">
                                     <label class="form-control-label" for="input-Interests">Interests</label>
-                                    <input type="text" id="input-Interests" class="form-control" placeholder="Services">
+                                    <input type="text" name="interests_Mentor" id="input-Interests" class="form-control"
+                                        placeholder="Services">
                                 </div>
                             </div>
                         </div>
@@ -714,26 +716,27 @@
                             <div class="col-lg-6">
                                 <div class="form-group">
                                     <label class="form-control-label" for="input-tieMail">TIE Email ID *</label>
-                                    <input required type="text" id="input-tieMail" class="form-control"
-                                        placeholder="TIE Email ID" value="">
+                                    <input required type="text" name="tieEmail_Mentor" id="input-tieMail"
+                                        class="form-control" placeholder="TIE Email ID" value="">
                                 </div>
                             </div>
+
                             <div class="col-lg-6">
                                 <div class="form-group">
                                     <label class="form-control-label" for="input-tiePassword">TIE Password *</label>
-                                    <input required type="" id="input-tiePassword" class="form-control"
-                                        placeholder="TIE PAssword" value="">
+                                    <input required type="" name="tiePassword_Mentor" id="input-tiePassword"
+                                        class="form-control" placeholder="TIE PAssword" value="">
                                 </div>
                             </div>
                         </div>
                         <div">
                             <div class="form-group">
                                 <label class="form-control-label">Brief about Mentor</label>
-                                <textarea rows="4" class="form-control"
+                                <textarea name="Brief_Mentor" rows="4" class="form-control"
                                     placeholder="A few words about mentor ..."></textarea>
                             </div>
                             <label for="interest">You Are Intrested In * </label>
-                            <select class="selectBox" name="Interests" id="interest" required>
+                            <select name="Interests_Mentor" class="selectBox" name="Interests" id="interest" required>
                                 <option value="All">All</option>
                                 <option value="Mentors">Mentors</option>
                                 <option value="Incubators">Incubators</option>
@@ -743,7 +746,7 @@
                         </div">
                         <br>
                         <button type="reset" class="btn bg-gradient-secondary" data-bs-dismiss="modal">Cancel</button>
-                        <button type="button" class="btn bg-gradient-primary">Save changes</button>
+                        <button type="submit" class="btn bg-gradient-primary">Save changes</button>
                     </form>
                 </div>
 
