show startUp list done

--- a/userPanel/mentorPanel/index.html
+++ b/userPanel/mentorPanel/index.html
@@ -774,15 +774,8 @@
                                         <th data-field="contact" data-sortable="true">Phone</th>
                                         <th data-field="email">Email</th>
                                     </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td>S0001</td>
-                                            <td>Dakota Rice</td>
-                                            <td>Available</td>
-                                            <td>98765321</td>
-                                            <td>cake@gmail.com</td>
-                                            <td></td>
-                                        </tr>
+                                    <tbody id="tbody">
+
 
                                     </tbody>
                                 </table>
