--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
                     </div>
                     <div class="col-12 col-md-6">
                         <h3 class="text-white">Our Vision</h3>
-                        <small class="text-white">To accelerate your startup's growth. It's a mentor-based program that provides intensive guidance, support and structure for a set period of time.</small>
+                        <small class="text-white">To help companies quickly understand and navigate the technical and business complexity of incorporating new capabilities so they can more quickly and confidently plan, develop and deliver their products.</small>
                         <div class="triangle">
                             <img src="/img/triangle-pic-removebg-preview.png" alt="">
                         </div>
