User Panel changes & landnig page

--- a/admin/Edit.html
+++ b/admin/Edit.html
@@ -411,6 +411,29 @@
                                             <option value="Accelerators">Accelerators</option>
                                             <option value="Investors">Investors</option>
                                         </select>
+                                        <div class="documents">
+                                            <table style="width:100%; border: 1px solid black; margin-top: 1rem;">
+                                                <tr style="border: 1px solid black;">
+                                                  <th>Documents Available</th>
+                                                  <th>View</th>
+                                                </tr>
+                                                <tr>
+                                                  <td>tax info.pdf</td>
+                                                  <td>
+                                                    <i class="fa fa-download" aria-hidden="true"></i>
+                                                    <i class="fa fa-times" aria-hidden="true"></i>
+                                                </td>
+                                                </tr>
+                                                <tr>
+                                                  <td>Payment.pdf</td>
+                                                  <td>
+                                                    <i class="fa fa-download" aria-hidden="true"></i>
+                                                    <i class="fa fa-times" aria-hidden="true"></i>
+            
+                                                </td>
+                                                </tr>
+                                            </table>
+                                        </div>
 
                                     </fieldset>
 
@@ -530,6 +553,29 @@
                                             <option value="Accelerators">Accelerators</option>
                                             <option value="Investors">Investors</option>
                                         </select>
+                                        <div class="documents">
+                                            <table style="width:100%; border: 1px solid black; margin-top: 1rem;">
+                                                <tr style="border: 1px solid black;">
+                                                  <th>Documents Available</th>
+                                                  <th>View</th>
+                                                </tr>
+                                                <tr>
+                                                  <td>tax info.pdf</td>
+                                                  <td>
+                                                    <i class="fa fa-download" aria-hidden="true"></i>
+                                                    <i class="fa fa-times" aria-hidden="true"></i>
+                                                </td>
+                                                </tr>
+                                                <tr>
+                                                  <td>Payment.pdf</td>
+                                                  <td>
+                                                    <i class="fa fa-download" aria-hidden="true"></i>
+                                                    <i class="fa fa-times" aria-hidden="true"></i>
+            
+                                                </td>
+                                                </tr>
+                                            </table>
+                                        </div>
 
                                     </fieldset>
 
