--- a/admin/editdetails.html
+++ b/admin/editdetails.html
@@ -320,20 +320,20 @@
                                         <div class="documents">
                                             <table style="width:100%; border: 1px solid black; margin-top: 1rem;">
                                                 <tr style="border: 1px solid black;">
-                                                  <th>Documents</th>
+                                                  <th>Documents Available</th>
                                                   <th>View</th>
                                                 </tr>
                                                 <tr>
                                                   <td>tax info.pdf</td>
                                                   <td>
-                                                    <i class="fa fa-eye" aria-hidden="true"></i>
+                                                    <i class="fa fa-download" aria-hidden="true"></i>
                                                     <i class="fa fa-times" aria-hidden="true"></i>
                                                 </td>
                                                 </tr>
                                                 <tr>
                                                   <td>Payment.pdf</td>
                                                   <td>
-                                                    <i class="fa fa-eye" aria-hidden="true"></i>
+                                                    <i class="fa fa-download" aria-hidden="true"></i>
                                                     <i class="fa fa-times" aria-hidden="true"></i>
             
                                                 </td>
@@ -470,20 +470,20 @@
                                         <div class="documents">
                                             <table style="width:100%; border: 1px solid black; margin-top: 1rem;">
                                                 <tr style="border: 1px solid black;">
-                                                  <th>Documents</th>
+                                                  <th>Documents Available</th>
                                                   <th>View</th>
                                                 </tr>
                                                 <tr>
                                                   <td>tax info.pdf</td>
                                                   <td>
-                                                    <i class="fa fa-eye" aria-hidden="true"></i>
+                                                    <i class="fa fa-download" aria-hidden="true"></i>
                                                     <i class="fa fa-times" aria-hidden="true"></i>
                                                 </td>
                                                 </tr>
                                                 <tr>
                                                   <td>Payment.pdf</td>
                                                   <td>
-                                                    <i class="fa fa-eye" aria-hidden="true"></i>
+                                                    <i class="fa fa-download" aria-hidden="true"></i>
                                                     <i class="fa fa-times" aria-hidden="true"></i>
             
                                                 </td>
