--- a/signUp.html
+++ b/signUp.html
@@ -31,6 +31,9 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+    <!--  toastify  -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </head>
 
 
@@ -343,6 +346,8 @@
 
     <!-- javascript for signUp -->
     <script src="js/signUpJs/signUp.js"></script>
+
+
 
 </body>
 
