--- a/userPanel/mentorPanel/index.html
+++ b/userPanel/mentorPanel/index.html
@@ -317,7 +317,13 @@
                                             </a>
                                         </div>
                                         <div class="card-body px-1 pb-0">
-                                            <p class="text-gradient text-dark mb-2 text-sm">#1</p>
+                                            <div class="position-relative">
+                                                <a class="d-block shadow-xl border-radius-xl">
+                                                    <img src="https://www.f6s.com/static-resource/images/f6s-banner.jpg?u=22a25ce4c9a55d126af115ffedff8aa3"
+                                                        alt="img-blur-shadow" class="img-fluid shadow border-radius-lg">
+                                                </a>
+                                            </div>
+                                            <p class="text-gradient text-dark mb-2 text-sm m-3">#1</p>
                                             <a href="javascript:;">
                                                 <h5>
                                                     Industry Connect
@@ -360,115 +366,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-xl-3 col-md-6 mb-4">
-                                    <div class="card card-blog card-plain">
-                                        <div class="position-relative">
-                                            <a class="d-block shadow-xl border-radius-xl">
-                                                <img src="https://www.kindpng.com/picc/m/126-1267022_animated-resource-intro-video-hd-png-download.png"
-                                                    alt="img-blur-shadow" class="img-fluid shadow border-radius-lg">
-                                            </a>
-                                        </div>
-                                        <div class="card-body px-1 pb-0">
-                                            <p class="text-gradient text-dark mb-2 text-sm">#2</p>
-                                            <a href="javascript:;">
-                                                <h5>
-                                                    Market Connect
-                                                </h5>
-                                            </a>
-                                            <p class="mb-4 text-sm">
-                                                Get disruptive acceleration & exposure to huge market potential with our
-                                                experienced Metors/Staff
-                                            </p>
-                                            <div class="d-flex align-items-center justify-content-between">
-                                                <button type="button" class="btn btn-outline-primary btn-sm mb-0">
-                                                    Connect</button>
-                                                <div class="avatar-group mt-2">
-                                                    <a href="javascript:;" class="avatar avatar-xs rounded-circle"
-                                                        data-bs-toggle="tooltip" data-bs-placement="bottom" title=""
-                                                        data-bs-original-title="Nick Daniel" data-original-title="">
-                                                        <img alt="Image placeholder"
-                                                            src="https://demos.creative-tim.com/soft-ui-dashboard/assets/img/team-3.jpg">
-                                                    </a>
-                                                    <a href="javascript:;" class="avatar avatar-xs rounded-circle"
-                                                        data-bs-toggle="tooltip" data-bs-placement="bottom" title=""
-                                                        data-bs-original-title="Peterson" data-original-title="">
-                                                        <img alt="Image placeholder"
-                                                            src="https://demos.creative-tim.com/soft-ui-dashboard/assets/img/team-4.jpg">
-                                                    </a>
-                                                    <a href="javascript:;" class="avatar avatar-xs rounded-circle"
-                                                        data-bs-toggle="tooltip" data-bs-placement="bottom" title=""
-                                                        data-bs-original-title="Elena Morison" data-original-title="">
-                                                        <img alt="Image placeholder"
-                                                            src="https://demos.creative-tim.com/soft-ui-dashboard/assets/img/team-1.jpg">
-                                                    </a>
-                                                    <a href="javascript:;" class="avatar avatar-xs rounded-circle"
-                                                        data-bs-toggle="tooltip" data-bs-placement="bottom" title=""
-                                                        data-bs-original-title="Ryan Milly" data-original-title="">
-                                                        <img alt="Image placeholder"
-                                                            src="https://demos.creative-tim.com/soft-ui-dashboard/assets/img/team-2.jpg">
-                                                    </a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-xl-3 col-md-6 mb-4">
-                                    <div class="card card-blog card-plain">
-                                        <div class="position-relative">
-                                            <a class="d-block shadow-xl border-radius-xl">
-                                                <img src="https://kettera-accp.apps.ca-1a.mendixcloud.com/img/SuperUser$SalesDemos$MentorConnect.png?638025847503939746"
-                                                    alt="img-blur-shadow" class="img-fluid shadow border-radius-xl">
-                                            </a>
-                                        </div>
-                                        <div class="card-body px-1 pb-0">
-                                            <p class="text-gradient text-dark mb-2 text-sm">#3</p>
-                                            <a href="javascript:;">
-                                                <h5>
-                                                    Mentoring
-                                                </h5>
-                                            </a>
-                                            <p class="mb-4 text-sm">
-                                                Explore the unknown paths to become a unicorn with our experienced
-                                                Mentors
-                                            </p>
-                                            <div class="d-flex align-items-center justify-content-between">
-                                                <button type="button" class="btn btn-outline-primary btn-sm mb-0">
-                                                    Connect</button>
-                                                <div class="avatar-group mt-2">
-                                                    <a href="javascript:;" class="avatar avatar-xs rounded-circle"
-                                                        data-bs-toggle="tooltip" data-bs-placement="bottom" title=""
-                                                        data-bs-original-title="Peterson" data-original-title="">
-                                                        <img alt="Image placeholder"
-                                                            src="https://demos.creative-tim.com/soft-ui-dashboard/assets/img/team-4.jpg">
-                                                    </a>
-                                                    <a href="javascript:;" class="avatar avatar-xs rounded-circle"
-                                                        data-bs-toggle="tooltip" data-bs-placement="bottom" title=""
-                                                        data-bs-original-title="Nick Daniel" data-original-title="">
-                                                        <img alt="Image placeholder"
-                                                            src="https://demos.creative-tim.com/soft-ui-dashboard/assets/img/team-3.jpg">
-                                                    </a>
-                                                    <a href="javascript:;" class="avatar avatar-xs rounded-circle"
-                                                        data-bs-toggle="tooltip" data-bs-placement="bottom" title=""
-                                                        data-bs-original-title="Ryan Milly" data-original-title="">
-                                                        <img alt="Image placeholder"
-                                                            src="https://demos.creative-tim.com/soft-ui-dashboard/assets/img/team-2.jpg">
-                                                    </a>
-                                                    <a href="javascript:;" class="avatar avatar-xs rounded-circle"
-                                                        data-bs-toggle="tooltip" data-bs-placement="bottom" title=""
-                                                        data-bs-original-title="Elena Morison" data-original-title="">
-                                                        <img alt="Image placeholder"
-                                                            src="https://demos.creative-tim.com/soft-ui-dashboard/assets/img/team-1.jpg">
-                                                    </a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
                             </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
             <!-------------------------White box------------------------------------------->
             <div class="card mb-4 AddDetails box">
                 <div class="card-header">
