edit form updated

--- a/admin/Edit.html
+++ b/admin/Edit.html
@@ -411,29 +411,6 @@
                                             <option value="Accelerators">Accelerators</option>
                                             <option value="Investors">Investors</option>
                                         </select>
-                                        <div class="documents">
-                                            <table style="width:100%; border: 1px solid black; margin-top: 1rem;">
-                                                <tr style="border: 1px solid black;">
-                                                  <th>Documents Available</th>
-                                                  <th>View</th>
-                                                </tr>
-                                                <tr>
-                                                  <td>tax info.pdf</td>
-                                                  <td>
-                                                    <i class="fa fa-download" aria-hidden="true"></i>
-                                                    <i class="fa fa-times" aria-hidden="true"></i>
-                                                </td>
-                                                </tr>
-                                                <tr>
-                                                  <td>Payment.pdf</td>
-                                                  <td>
-                                                    <i class="fa fa-download" aria-hidden="true"></i>
-                                                    <i class="fa fa-times" aria-hidden="true"></i>
-            
-                                                </td>
-                                                </tr>
-                                            </table>
-                                        </div>
 
                                     </fieldset>
 
@@ -445,6 +422,29 @@
 
 
                             </form>
+                            <div class="documents">
+                                <table style="width:100%; border: 1px solid black; margin-top: 1rem;">
+                                    <tr style="border: 1px solid black;">
+                                      <th>Documents Available</th>
+                                      <th>View</th>
+                                    </tr>
+                                    <tr>
+                                      <td>tax info.pdf</td>
+                                      <td>
+                                        <i class="fa fa-download" aria-hidden="true"></i>
+                                        <i style="margin-left: 1rem;" class="fa fa-times" aria-hidden="true"></i>
+                                    </td>
+                                    </tr>
+                                    <tr>
+                                      <td>Payment.pdf</td>
+                                      <td>
+                                        <i class="fa fa-download" aria-hidden="true"></i>
+                                        <i style="margin-left: 1rem;" class="fa fa-times" aria-hidden="true"></i>
+
+                                    </td>
+                                    </tr>
+                                </table>
+                            </div>
 
                             <!-- <form id="ft-form" style="display: none;" class="startupForm">
                                 <div class="">
@@ -553,29 +553,6 @@
                                             <option value="Accelerators">Accelerators</option>
                                             <option value="Investors">Investors</option>
                                         </select>
-                                        <div class="documents">
-                                            <table style="width:100%; border: 1px solid black; margin-top: 1rem;">
-                                                <tr style="border: 1px solid black;">
-                                                  <th>Documents Available</th>
-                                                  <th>View</th>
-                                                </tr>
-                                                <tr>
-                                                  <td>tax info.pdf</td>
-                                                  <td>
-                                                    <i class="fa fa-download" aria-hidden="true"></i>
-                                                    <i class="fa fa-times" aria-hidden="true"></i>
-                                                </td>
-                                                </tr>
-                                                <tr>
-                                                  <td>Payment.pdf</td>
-                                                  <td>
-                                                    <i class="fa fa-download" aria-hidden="true"></i>
-                                                    <i class="fa fa-times" aria-hidden="true"></i>
-            
-                                                </td>
-                                                </tr>
-                                            </table>
-                                        </div>
 
                                     </fieldset>
 
@@ -586,7 +563,31 @@
                                 </div>
 
 
-                            </form> -->
+                            </form> 
+                            <div class="documents">
+                                <table style="width:100%; border: 1px solid black; margin-top: 1rem;">
+                                    <tr style="border: 1px solid black;">
+                                      <th>Documents Available</th>
+                                      <th>View</th>
+                                    </tr>
+                                    <tr>
+                                      <td>tax info.pdf</td>
+                                      <td>
+                                        <i class="fa fa-download" aria-hidden="true"></i>
+                                        <i style="margin-left: 1rem;" class="fa fa-times" aria-hidden="true"></i>
+                                    </td>
+                                    </tr>
+                                    <tr>
+                                      <td>Payment.pdf</td>
+                                      <td>
+                                        <i class="fa fa-download" aria-hidden="true"></i>
+                                        <i style="margin-left: 1rem;" class="fa fa-times" aria-hidden="true"></i>
+
+                                    </td>
+                                    </tr>
+                                </table>
+                            </div>
+                            -->
 
 
                             <!-- ---------------------------sstartup form end------------------------------- -->
